[package]
name = "my-crate"
version = "0.1.0"
authors = ["Matthew Pagan <mastapegs01@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.74"
dominator = "0.5.18"
futures-signals = "0.3.20"
once_cell = "1.7.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
default = ["console_error_panic_hook"]